--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/exercise2/task1" />
+    <meta http-equiv="refresh" content="0; url=/TME061/exercise2/task1" />
   </head>
 </html>
