--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -2,6 +2,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/exercise4/task1" />
+    <meta http-equiv="refresh" content="0; url=/TME061/exercise4/task1" />
   </head>
 </html>
