--- a/exercise3/index.html
+++ b/exercise3/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/exercise3/task1" />
+<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/TME061/exercise3/task1" />
