--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/exercise1/task1" />
+<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/TME061/exercise1/task1" />
