--- a/exercise2/index.html
+++ b/exercise2/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/exercise2/task1" />
+<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/TME061/exercise2/task1" />
