--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/exercise4/task1" />
+<!DOCTYPE html> <meta http-equiv=refresh  content="0; url=/TME061/exercise4/task1" />
